@@ -448,9 +448,6 @@ table.listing {
             position: absolute;
             right: 10%;
             top: 2em;
-            // @media screen and (min-width: $breakpoint-desktop-larger) {
-            //     right: 20em;
-            // }
         }
 
         .locked-indicator {
@@ -564,7 +561,7 @@ table.listing {
 }
 
 
-@media screen and (min-width: $breakpoint-mobile) {
+@include media-breakpoint-up(sm) {
     .listing {
         &.horiz > li {
             float: left;
