@@ -63,14 +63,14 @@ a.button.page404__button { // more specific to override standard button styles
 }
 
 // SMALL DESKTOP CHANGES:
-@media screen and (max-width: $breakpoint-desktop-small) { // 900px
+@include media-breakpoint-down(sm) {
     .wagtail-logo-container__desktop {
         display: none;
     }
 }
 
 // MOBILE CHANGES:
-@media screen and (max-width: $breakpoint-mobile) { // 800px
+@include media-breakpoint-down(xs) {
     .page404__text-container {
         width: 400px;
     }
