@@ -1,6 +1,6 @@
 {% load wagtailadmin_tags static %}
 
-<div class="wagtail-logo-container__desktop u-hidden@small">
+<div class="wagtail-logo-container__desktop u-hidden@xs">
     <img class="wagtail-logo wagtail-logo__body" src="{% static 'wagtailadmin/images/logo-body.svg' %}" alt=""/>
     <img class="wagtail-logo wagtail-logo__tail" src="{% static 'wagtailadmin/images/logo-tail.svg' %}" alt="" />
     <img class="wagtail-logo wagtail-logo__eye--open" src="{% static 'wagtailadmin/images/logo-eyeopen.svg' %}" alt="" />
